--- a/css/master.css
+++ b/css/master.css
@@ -9,9 +9,51 @@
 @import url( footer_style_mobile.css) screen and ( max-width: 1399px) and ( min-width: 768px);
 @import url( footer_style_phone.css) screen and ( max-width: 1399px) and ( max-width: 767px);
 
-/* 디바이스 크기 1367px~	tablat 768px ~ px */
-
-#wrap {
-  width: 100%;
-  background: beige;
+.back-to-position {
+  opacity: 0;
+  transition: 1s;
+}
+.back-to-position.to-right {
+  transform: translateX(-150px);
+}
+.back-to-position.to-left {
+  transform: translateX(150px);
+}
+.back-to-position.to-bottom {
+  transform: translateY(-150px);
+}
+.show .back-to-position {
+  opacity: 1;
+  transform: translateX(0);
+  transform: translateY(0);
+}
+.show .back-to-position.delay-0 {
+  transition-delay: 0;
+}
+.show .back-to-position.delay-1 {
+  transition-delay: .1s;
+}
+.show .back-to-position.delay-2 {
+  transition-delay: .2s;
+}
+.show .back-to-position.delay-3 {
+  transition-delay: .3s;
+}
+.show .back-to-position.delay-4 {
+  transition-delay: .4s;
+}
+.show .back-to-position.delay-5 {
+  transition-delay: .5s;
+}
+.show .back-to-position.delay-6 {
+  transition-delay: .6s;
+}
+.show .back-to-position.delay-7 {
+  transition-delay: .7s;
+}
+.show .back-to-position.delay-8 {
+  transition-delay: .8s;
+}
+.show .back-to-position.delay-9 {
+  transition-delay: .9s;
 }
