--- a/css/contents_style_pc.css
+++ b/css/contents_style_pc.css
@@ -126,9 +126,17 @@ img {
 #story_pc {
   width: 100%;
 }
-  #story_pc > img {
-    width: 100%;
-  }
+#story_pc > h2 {
+  font-size: 100px;
+  font-weight: 200;
+  padding-top: 100px;
+  margin: 0 50px -27px 0;
+  float: right;
+  color: #bbebff;
+}
+#story_pc > img {
+  width: 100%;
+}
 #story_phone {
   display: none;
 }
